test/libhyperion/syntaxTests/iceRegressionTests/const_struct_with_mapping.hyp
contract C {
    struct S {
        mapping(uint => uint) c;
    }
    S public constant e = Z1212121212121212121212121212121212121212;
}
// ----
// TypeError 9259: (71-134): Only constants of value type and byte array type are implemented.
